objects/APL_Lost_Dead_Project__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Account_Name__r.Account_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>APL Lost Dead Projects</relationshipLabel>
        <relationshipName>APL_Lost_Dead_Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Receive_Region__c</fullName>
        <label>Business Receive Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Existing_Business_Lost_reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North America/Direct</fullName>
                </value>
                <value>
                    <fullName>South America/Direct</fullName>
                </value>
                <value>
                    <fullName>China/Direct</fullName>
                </value>
                <value>
                    <fullName>Japan/Direct</fullName>
                </value>
                <value>
                    <fullName>Korea/Direct</fullName>
                </value>
                <value>
                    <fullName>South Asia/Direct</fullName>
                </value>
                <value>
                    <fullName>EMEA/Direct</fullName>
                </value>
                <value>
                    <fullName>India/Direct</fullName>
                </value>
                <value>
                    <fullName>North America/Channel</fullName>
                </value>
                <value>
                    <fullName>South America/Channel</fullName>
                </value>
                <value>
                    <fullName>China/Channel</fullName>
                </value>
                <value>
                    <fullName>Japan/Channel</fullName>
                </value>
                <value>
                    <fullName>Korea/Channel</fullName>
                </value>
                <value>
                    <fullName>South Asia/Channel</fullName>
                </value>
                <value>
                    <fullName>EMEA/Channel</fullName>
                </value>
                <value>
                    <fullName>India/Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description (Length 255)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Billing_Impact_for_Current_FY__c</fullName>
        <formula>- Estimated_Business_Value_Per_Quarter__c  / 3  * ( CASE( Lost_Start_Fiscal_Month__c,
&apos;01&apos;, 12, 
&apos;02&apos;, 11, 
&apos;03&apos;, 10, 
&apos;04&apos;, 9, 
&apos;05&apos;, 8, 
&apos;06&apos;, 7, 
&apos;07&apos;, 6, 
&apos;08&apos;, 5, 
&apos;09&apos;, 4, 
&apos;10&apos;, 3, 
&apos;11&apos;, 2,
1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Billing Impact for Current FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Billing_Impact_for_Next_FY__c</fullName>
        <formula>- Estimated_Business_Value_Per_Quarter__c  / 3  * ( CASE( Lost_Start_Fiscal_Month__c,
&apos;01&apos;, 0, 
&apos;02&apos;, 1, 
&apos;03&apos;, 2, 
&apos;04&apos;, 3, 
&apos;05&apos;, 4, 
&apos;06&apos;, 5, 
&apos;07&apos;, 6, 
&apos;08&apos;, 7, 
&apos;09&apos;, 8, 
&apos;10&apos;, 9, 
&apos;11&apos;, 10,
11) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Billing Impact for Next FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Business_Value_Per_Quarter__c</fullName>
        <label>Business Value Per Quarter (USD)</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Business_Lost_reason__c</fullName>
        <label>Existing Business Lost reason</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Program Cancellation / End of Life</fullName>
                </value>
                <value>
                    <fullName>Competitor win - price driven</fullName>
                </value>
                <value>
                    <fullName>Competitor win - value provided beyond price (stocking, etc)</fullName>
                </value>
                <value>
                    <fullName>Migration - Sales moved to other territory (Still Direct)</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>TE exit of product</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Migration - sales moved to Channel/Dustributor.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Start_Fiscal_Month__c</fullName>
        <label>Lost Start Fiscal Month</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Start_Fiscal_Year__c</fullName>
        <label>Lost Start Fiscal Year</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_Part_Number__c</fullName>
        <label>Major Part Number (Length 255)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Product__c</fullName>
        <label>Primary Product</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tooling JK1</fullName>
                </value>
                <value>
                    <fullName>APL Relay	G58	Appliance Assembly for Switches</fullName>
                    <label>Relay G58</label>
                </value>
                <value>
                    <fullName>APL Relay	G59	Appliance Miniature PCB Relays</fullName>
                    <label>Relay G59</label>
                </value>
                <value>
                    <fullName>APL Relay	J30	Appliance PCB Relays</fullName>
                    <label>Relay J30</label>
                </value>
                <value>
                    <fullName>MAGNET WIRE	223	AMPLIVAR</fullName>
                    <label>MW 223</label>
                </value>
                <value>
                    <fullName>MAGNET WIRE	224	MAG-MATE</fullName>
                    <label>MW 224</label>
                </value>
                <value>
                    <fullName>MAGNET WIRE	226	Crimpband Splices</fullName>
                    <label>MW 226</label>
                </value>
                <value>
                    <fullName>MAGNET WIRE	227	Special Magwire Products</fullName>
                    <label>MW 227</label>
                </value>
                <value>
                    <fullName>MAGNET WIRE	344	Hermetic Cluster Blocks</fullName>
                    <label>MW 344</label>
                </value>
                <value>
                    <fullName>MAGNET WIRE	F12	SIAMEZE</fullName>
                    <label>MW F12</label>
                </value>
                <value>
                    <fullName>Power Interconnects	100	Economy Power</fullName>
                    <label>Power 100</label>
                </value>
                <value>
                    <fullName>Power Interconnects	103	MTA &amp; SL 156</fullName>
                    <label>Power 103</label>
                </value>
                <value>
                    <fullName>Power Interconnects	106	COMM PIN/SOCKET</fullName>
                    <label>Power 106</label>
                </value>
                <value>
                    <fullName>Power Interconnects	236	Universal  MATE-N-LOK Connectors</fullName>
                    <label>Power 236</label>
                </value>
                <value>
                    <fullName>Power Interconnects	237	Commercial MATE-N-LOK Connectors</fullName>
                    <label>Power 237</label>
                </value>
                <value>
                    <fullName>Power Interconnects	238	Mini-Universal MATE-N-LOK Connectors</fullName>
                    <label>Power 238</label>
                </value>
                <value>
                    <fullName>Power Interconnects	239	MICRO MATE-N-LOK</fullName>
                    <label>Power 239</label>
                </value>
                <value>
                    <fullName>Power Interconnects	394	RAST 5 Connectors</fullName>
                    <label>Power 394</label>
                </value>
                <value>
                    <fullName>Power Interconnects	429	GI Power</fullName>
                    <label>Power 429</label>
                </value>
                <value>
                    <fullName>Power Interconnects	442	Power Key 5.0</fullName>
                    <label>Power 442</label>
                </value>
                <value>
                    <fullName>Power Interconnects	518	AMP Univ. and Power Double Lock</fullName>
                    <label>Power 518</label>
                </value>
                <value>
                    <fullName>Power Interconnects	G31	VAL-U-LOK</fullName>
                    <label>Power G31</label>
                </value>
                <value>
                    <fullName>Power Interconnects	J35	Power Triple Lock</fullName>
                    <label>Power J35</label>
                </value>
                <value>
                    <fullName>Power Interconnects	JJ4	RAST 5 non-IDC</fullName>
                    <label>Power JJ4</label>
                </value>
                <value>
                    <fullName>Power Interconnects	P19	Special Appliance Connectors</fullName>
                    <label>Power P19</label>
                </value>
                <value>
                    <fullName>Signal Interconnects	101	Economy Signal</fullName>
                    <label>Signal 101</label>
                </value>
                <value>
                    <fullName>Signal Interconnects	104	MTA 100 &amp; CSTII 100</fullName>
                    <label>Signal 104</label>
                </value>
                <value>
                    <fullName>Signal Interconnects	392	AMP-IN and PC Board Disconnects</fullName>
                    <label>Signal 392</label>
                </value>
                <value>
                    <fullName>Signal Interconnects	405	RAST 2.5 Connectors</fullName>
                    <label>Signal 405</label>
                </value>
                <value>
                    <fullName>Signal Interconnects	430	GI Signal</fullName>
                    <label>Signal 430</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>APL Lost Dead Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>APL Lost Dead Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APL Lost Dead Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>